<resources>
    <string name="app_name">Issues App</string>
    <string name="description_users_picture_big">Larger user\'s picture</string>
    <string name="description_users_picture">User\'s picture</string>
    <string name="description_users_full_name">User\'s full name</string>
    <string name="description_date_of_birth">User\'s date of birth</string>
    <string name="description_issue_count">User\'s issue count</string>
    <string name="description_loading_text">Loading text</string>
    <string name="description_error">Error text</string>
    <string name="loading_text">Loading issues list…</string>
    <string name="error_message_with_message">An error occurred: %s</string>
    <string name="menu_reload">Reload</string>
    <string name="issues_label">Issue count</string>
</resources>
