<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/issues_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/issues_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/description_error"
                android:text="@string/error_message_with_message"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/issues_recycler_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layoutManager="GridLayoutManager"
            app:spanCount="@integer/grid_span_count" />

        <LinearLayout
            android:id="@+id/issues_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_issues_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_loading_text"
                    android:text="@string/loading_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>