<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <RelativeLayout
        android:id="@+id/card_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/card_big_popping_height">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/user_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description_users_picture_big"
                    android:maxHeight="@dimen/card_image_big_max_height"
                    android:src="@drawable/ic_user_large"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/full_name"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/description_users_full_name"
                    android:textColor="@color/colorBrowner"
                    android:text=""
                    tools:text="Full name"/>

                <TextView
                    android:id="@+id/date_of_birth_text"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_date_of_birth"
                    android:gravity="center"
                    android:textColor="@color/colorBrown"
                    android:text=""
                    tools:text="Date of birth"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"
                    android:contentDescription="@string/description_date_of_birth"
                    android:text="@string/issues_label"
                    android:textAllCaps="true"
                    tools:text="Issues count"/>

                <TextView
                    android:id="@+id/issues_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:textColor="@color/colorAccent"
                    android:contentDescription="@string/description_date_of_birth"
                    android:text=""
                    tools:text="Issues count"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
